--- a/TiendaVirtual_SOA/package.json
+++ b/TiendaVirtual_SOA/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^19.1.8",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "colorette": "^2.0.20",
     "express": "^4.18.2",
     "firebase": "^11.4.0",
     "jquery": "^3.7.1",
