--- a/TiendaVirtual_SOA/package.json
+++ b/TiendaVirtual_SOA/package.json
@@ -30,6 +30,7 @@
     "firebase": "^11.7.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
